Add project modal and portfolio enhancements
Introduce an interactive project modal and revamp the portfolio section. Added assets/image/project-8.jpg and updated index.html to rename sections/labels (Projects → Portfolio), adjust copy (Full-Stack wording), update resume link, and convert portfolio items to data-driven boxes with external links and "Know more" buttons. Implemented projectDetails data and modal open/close logic in script.js, and added modal, button, and responsive styles in style.css. These changes enable per-project detail views without navigation and improve portfolio presentation and accessibility.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#portfolio">Projects</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -54,12 +54,12 @@
         <div class="home-content" style="position:relative;z-index:1;">
             <h3 style="margin-bottom: 0.5em;">Hi, I'm</h3>
             <h1 style="margin-bottom: 0.5em;">Sanketh Elalli</h1>
-            <h3>Flowgrammer | Stack & Software Developer<span class="multiple-text"></span></h3>
+            <h3>Flowgrammer | Full-Stack & Software Developer<span class="multiple-text"></span></h3>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1uE0hcZ7xWpXII0v0V7whXM3hTFFXCOnb/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
+            <a href="https://drive.google.com/file/d/1pBXYmxI8dudD7obbiITZV1qy3ctCSSZ7/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
         </div>
     <a href="#about" class="down-arrow"><i class="bx bx-chevron-down"></i></a>
     </section>
@@ -72,10 +72,10 @@
         <div class="about-content">
             <h2 class="about-heading">About<span> Me,</span></h2>
             <p>
-                I'm a <b>Stack & Software</b> Developer with expertise in <b>Python</b>, <b>NodeJS</b>, and <b>Databases</b>. I'm passionate about building scalable and intuitive applications.
+                I'm a <b>Full-Stack & Software</b> Developer. I'm passionate about building scalable and intuitive applications.
             </p>
             <p>
-                I also specialize in AI-driven automation with <b>n8n</b>, creating workflows that connect API's, Databases, and AI agents into seamless, intelligent systems.
+                I also specialize in AI-driven Automation with <b>n8n</b>, building workflows that connect API's, Databases, and RAG AI Agents into seamless, intelligent systems.
             </p>
             <p>
                 My focus: Delivering solutions that combine functionality, design, and automation - turning ideas into impactful digital products.
@@ -91,7 +91,7 @@
             <div class="services-box">
                 <img src="assets/image/ai.svg" alt="AI Automation" width="40">
                 <h3>AI Automation</h3>
-                <p>I build automation systems - integrating AI agents, Databases, and API's.</p>
+                <p>I build automation systems integrating - AI Agents, RAG Agent Systems, and API's.</p>
                 <div class="particles"></div>
             </div>
             <div class="services-box">
@@ -111,74 +111,134 @@
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio">
-        <h2 class="heading"><span>Projects</span></h2>
+        <h2 class="heading"><span>Portfolio</span></h2>
         <div class="portfolio-container">
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="coreaivideo">
+                <img src="assets/image/project-8.jpg" alt="CoreAIVideo">
+                <div class="portfolio-layer">
+                    <h4>CoreAIVideo</h4>
+                    <p class="project-category">AI & Automation / Full-Stack Development</p>
+                    <div class="portfolio-buttons">
+                        <a href="https://coreaivideo.com/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="coreaivideo"><i class='bx bx-info-circle'></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-box" data-project="coreaivideo">
+                <img src="assets/image/project-9.png" alt="Capitalis">
+                <div class="portfolio-layer">
+                    <h4>Capitalis</h4>
+                    <p class="project-category">Vibe Coding</p>
+                    <div class="portfolio-buttons">
+                        <a href="https://capitalis-s01.caffeine.xyz/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="capitalis"><i class='bx bx-info-circle'></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-box" data-project="pillora">
                 <img src="assets/image/project-5.jpg" alt="Online Pharmacy Store">
                 <div class="portfolio-layer">
                     <h4>Pillora</h4>
                     <p class="project-category">MERN Stack Online Pharmacy Store</p>
-                    <a href="https://pillora.vercel.app" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://pillora.vercel.app" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="pillora"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="agrihub">
                 <img src="assets/image/project-6.jpg" alt="Agriculture Portal">
                 <div class="portfolio-layer">
                     <h4>AgriHub</h4>
                     <p class="project-category">LLM Assisted Portal for Sustainable Agriculture (PHP Development)</p>
-                    <a href="https://github.com/SankethElalli/AgriHub" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://github.com/SankethElalli/AgriHub" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="agrihub"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="writerboard">
                 <img src="assets/image/writerboard.jpg" alt="WriterBoard">
                 <div class="portfolio-layer">
                     <h4>WriterBoard</h4>
                     <p class="project-category">Qt Software Development</p>
-                    <a href="https://www.writerboard.app/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://www.writerboard.app/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="writerboard"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="westernstreet">
                 <img src="assets/image/project-7.jpg" alt="E-commerce Platform">
                 <div class="portfolio-layer">
                     <h4>WesternStreet</h4>
                     <p class="project-category">MERN Stack Online Sneaker Store</p>
-                    <a href="https://github.com/SankethElalli/MERN-StackEcommercePlatform" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://github.com/SankethElalli/MERN-StackEcommercePlatform" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="westernstreet"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="qrattendance">
                 <img src="assets/image/project-2.jpg" alt="Networked QR Code Attendance System">
                 <div class="portfolio-layer">
                     <h4>Networked QR Code Attendance System</h4>
                     <p class="project-category">Django Development</p>
-                    <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="qrattendance"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="qcalc">
                 <img src="assets/image/project-3.jpg" alt="QCalc">
                 <div class="portfolio-layer">
                     <h4>QCalc</h4>
                     <p class="project-category">Qt Development</p>
-                    <a href="https://github.com/SankethElalli/QtCalculator" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://github.com/SankethElalli/QtCalculator" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="qcalc"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="bloodbank">
                 <img src="assets/image/project-1.jpg" alt="Blood Bank Inventory Management System">
                 <div class="portfolio-layer">
                     <h4>Blood Bank Inventory Management System</h4>
                     <p class="project-category">Web Development</p>
-                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://github.com/SankethElalli/BloodBankMangement-pHp" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="bloodbank"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="portfolio-box">
+            <div class="portfolio-box" data-project="genaimodel">
                 <img src="assets/image/project-4.jpg" alt="Gen AI model">
                 <div class="portfolio-layer">
                     <h4>Gen AI model</h4>
                     <p class="project-category">AI/ML</p>
-                    <a href="https://huggingface.co/snketh/Model-xzg" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                    <div class="portfolio-buttons">
+                        <a href="https://huggingface.co/snketh/Model-xzg" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                        <button class="know-more-btn" data-project="genaimodel"><i class='bx bx-info-circle'></i></button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Project Modal -->
+    <div id="projectModal" class="project-modal">
+        <div class="modal-backdrop"></div>
+        <div class="modal-content">
+            <button class="modal-close"><i class='bx bx-x'></i></button>
+            <div class="modal-header">
+                <h2 id="modalProjectTitle"></h2>
+            </div>
+            <div class="modal-body">
+                <ul id="modalProjectDetails"></ul>
+            </div>
+        </div>
+    </div>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
