Show project skills in modal & UI tweaks
Add skills metadata for projects and display them in the project modal. index.html: update intro and project category text and add a skills container inside the modal. script.js: extend projectDetails with skills arrays, render skill badges into the modal, and set modal content (details + skills). style.css: refine modal appearance (colors, spacing, radius, shadow), add styles for the skills section and badges, and improve responsive behavior across breakpoints. These changes surface project skills in the UI and polish the modal's visual/UX.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 I'm a <b>Full-Stack & Software</b> Developer. I'm passionate about building scalable and intuitive applications.
             </p>
             <p>
-                I also specialize in AI-driven Automation with <b>n8n</b>, building workflows that connect API's, Databases, and RAG AI Agents into seamless, intelligent systems.
+                I also specialize in AI-driven Automation with <b>n8n</b>, building Agentic workflows that connect API's, Databases, Chatbots and RAG Agents into seamless, intelligent systems.
             </p>
             <p>
                 My focus: Delivering solutions that combine functionality, design, and automation - turning ideas into impactful digital products.
@@ -128,7 +128,7 @@
                 <img src="assets/image/project-9.png" alt="Capitalis">
                 <div class="portfolio-layer">
                     <h4>Capitalis</h4>
-                    <p class="project-category">Vibe Coding</p>
+                    <p class="project-category">AI & Automation / MERN Stack Development</p>
                     <div class="portfolio-buttons">
                         <a href="https://capitalis-s01.caffeine.xyz/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="capitalis"><i class='bx bx-info-circle'></i></button>
@@ -139,7 +139,7 @@
                 <img src="assets/image/project-5.jpg" alt="Online Pharmacy Store">
                 <div class="portfolio-layer">
                     <h4>Pillora</h4>
-                    <p class="project-category">MERN Stack Online Pharmacy Store</p>
+                    <p class="project-category">MERN Stack Development</p>
                     <div class="portfolio-buttons">
                         <a href="https://pillora.vercel.app" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="pillora"><i class='bx bx-info-circle'></i></button>
@@ -161,7 +161,7 @@
                 <img src="assets/image/writerboard.jpg" alt="WriterBoard">
                 <div class="portfolio-layer">
                     <h4>WriterBoard</h4>
-                    <p class="project-category">Qt Software Development</p>
+                    <p class="project-category">Qt Framework</p>
                     <div class="portfolio-buttons">
                         <a href="https://www.writerboard.app/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="writerboard"><i class='bx bx-info-circle'></i></button>
@@ -172,7 +172,7 @@
                 <img src="assets/image/project-7.jpg" alt="E-commerce Platform">
                 <div class="portfolio-layer">
                     <h4>WesternStreet</h4>
-                    <p class="project-category">MERN Stack Online Sneaker Store</p>
+                    <p class="project-category">MERN Stack Development</p>
                     <div class="portfolio-buttons">
                         <a href="https://github.com/SankethElalli/MERN-StackEcommercePlatform" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="westernstreet"><i class='bx bx-info-circle'></i></button>
@@ -194,7 +194,7 @@
                 <img src="assets/image/project-3.jpg" alt="QCalc">
                 <div class="portfolio-layer">
                     <h4>QCalc</h4>
-                    <p class="project-category">Qt Development</p>
+                    <p class="project-category">Qt Framework</p>
                     <div class="portfolio-buttons">
                         <a href="https://github.com/SankethElalli/QtCalculator" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="qcalc"><i class='bx bx-info-circle'></i></button>
@@ -205,7 +205,7 @@
                 <img src="assets/image/project-1.jpg" alt="Blood Bank Inventory Management System">
                 <div class="portfolio-layer">
                     <h4>Blood Bank Inventory Management System</h4>
-                    <p class="project-category">Web Development</p>
+                    <p class="project-category">PHP Development</p>
                     <div class="portfolio-buttons">
                         <a href="https://github.com/SankethElalli/BloodBankMangement-pHp" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                         <button class="know-more-btn" data-project="bloodbank"><i class='bx bx-info-circle'></i></button>
@@ -236,6 +236,12 @@
             </div>
             <div class="modal-body">
                 <ul id="modalProjectDetails"></ul>
+            </div>
+            <div class="project-content">
+                <div class="skills-section">
+                    <h3>Skills</h3>
+                    <div id="modalProjectSkills" class="skills-container"></div>
+                </div>
             </div>
         </div>
     </div>
