Improve loader logic and update modal/responsive styles
Remove body onload anchor redirect and add async decoding on the home background image for better load behavior. Replace previous loader handling with a consolidated hideLoader() that adds a loaded class, fades the overlay, and ensures it's removed on load, DOMContentLoaded, or after a 4s fallback timeout. CSS tweaks: add easing to loader transition; enlarge modal header/title, increase modal spacing, paddings and max-heights; resize and reposition the modal-close button; and raise font sizes and paddings across multiple responsive breakpoints (portfolio icons/text, skill badges, modal list items) to improve readability and layout on small screens.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body onload="location.href='#home'">
+<body>
     <!-- Loading Screen -->
     <div id="loader-overlay">
                 <!-- Matrix Loader -->
@@ -49,7 +49,7 @@
 
     <!-- Home Section -->
     <section class="home" id="home">
-        <img class="home-bg-gif" src="assets/assets.gif" alt="Background animation" loading="eager" />
+        <img class="home-bg-gif" src="assets/assets.gif" alt="Background animation" loading="eager" decoding="async" />
         <div class="home-bg-blur"></div>
         <div class="home-content" style="position:relative;z-index:1;">
             <h3 style="margin-bottom: 0.5em;">Hi, I'm</h3>
